--- a/asset/style.css
+++ b/asset/style.css
@@ -11,9 +11,9 @@ background-color: white;
     color: black;
 }
 .navbar{
-    webkit-box-shadow: 30px 5px 5px black;
-    -moz-box-shadow:    5px 5px 5px black;
-    box-shadow:         5px 5px 5px black;
+    webkit-box-shadow: 30px 4px 5px grey;
+    -moz-box-shadow:    5px 4px 5px grey;
+    box-shadow:         5px 4px 5px grey;
     z-index:999;
 
     
@@ -38,8 +38,10 @@ background-color: white;
     font-weight: 600;
 }
 .banner{
-background-color: #f31111;
-padding-bottom: 10px;
+background-image: url("../img/banner.jpg");
+background-position: center;
+background-size: cover;
+padding-bottom: 155px;
 }
 .rounded {
     width: 460px;
@@ -51,6 +53,12 @@ padding-bottom: 10px;
     font-weight: 500;
     font-size: 30px;
     padding-top: 250px;
-    color: white;
+    color: black;
     padding-left: 45px;
+}
+.descriptiontext{
+    font-family:Montserrat;
+    padding-left: 70px;
+    font-size: 20px;
+    color: black;
 }
