--- a/asset/style.css
+++ b/asset/style.css
@@ -10,36 +10,34 @@ background-color: white;
     background-color: white; 
     color: black;
 }
-.navbar{
-    webkit-box-shadow: 2px 1px 1px yellow;
-    -moz-box-shadow:    1px 1px 1px red;
-    box-shadow:         1px 4px 1px red;
-    z-index:999;
-
-    
+.navbar{  
 }
 .navbartitle{
     font-family: Montserrat;
-    color: white;
+    color: black;
     
 }
 .header{
-    background: red;
-    
+color: white;
+
 
 }
 
 .descriptionsite{
     font-family: Montserrat;
-    color: black;
+    color: white;
     padding-top: 260px;
     padding-left: 20px;
     font-size: 35px;
     font-weight: 600;
 }
 .banner{
+    width: 100%;
+    position: relative;
 padding-bottom: 245px;
-background: linear-gradient(to bottom, red 9%,orange 100%,yellow 100%); /* W3C */
+background-image: url("../img/background.jpg");
+border-bottom-left-radius: 250% 160px;
+  border-bottom-right-radius: 250% 160px;;
 }
 .rounded {
     width: 460px;
@@ -59,4 +57,17 @@ background: linear-gradient(to bottom, red 9%,orange 100%,yellow 100%); /* W3C *
     padding-left: 45px;
     font-size: 20px;
     color: white;
+}
+.aboutus{
+    width: 100%;
+    position: relative;
+}
+.section-header h3{
+    padding-top: 30px;
+    font-family: Montserrat;
+    font-size: 36px;
+    color: #000000;
+    text-align: center;
+    font-weight: 500;
+    position: relative;
 }
