--- a/asset/style.css
+++ b/asset/style.css
@@ -71,3 +71,13 @@ border-bottom-left-radius: 250% 160px;
     font-weight: 500;
     position: relative;
 }
+
+.section-header p{
+    padding-top: 40px;
+    font-family: Montserrat;
+    font-size: 20px;
+    color: #000000;
+    text-align: center;
+    font-weight: 500;
+    position: relative;
+}
